--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,17 @@
+:root{
+    --background-color: #FFFFFF;
+    --secondary-background-color: #FDF8F4;
+    --title-color: #1E144F;
+    --font-color: #857E9B;
+    --button-color: #72569D;
+    --button-title-color: #684d91;
+    --focused-button-color: #FEEBDC;
+}
+
 *{
   	padding: 0;
 	margin: 0;
 	border: 0;
 	font-family: Ubuntu;
+    font-stretch: normal;
 }
