feature: add footer style

--- a/src/components/header/header.component.css
+++ b/src/components/header/header.component.css
@@ -1,5 +1,4 @@
 header{
-    background-color: var(--secondary-background-color);
     height: 80px;
     width: 100vw;
     top: 0;
@@ -18,6 +17,7 @@ header{
     align-items: center;
     margin-left: 3%;
     text-decoration: none;
+    margin-left: 120px;
 }
 
 .header-logo img{
