--- a/src/components/footer/footer.component.css
+++ b/src/components/footer/footer.component.css
@@ -1,5 +1,118 @@
 footer{
     width: 100vw;
-    height: 400px;
-    background: gray;
+    height: 350px;
+    bottom: 0;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer-itens{
+    flex: .95;
+    height: 90%;
+    margin-top: 20px !important;
+    margin-bottom: 20px;
+    padding-top: 50px;
+    display: flex;
+    border-top: 1px solid rgba(0,0,0,.2);
+}
+
+.footer-first-item{
+    flex: 1.3 !important;
+    margin-left: 100px !important;
+}
+
+.footer-first-item img{
+    width: 120px;
+    float: left;
+}
+
+.footer-first-item h3{
+    float: left;
+    margin-left: 20px;
+    font-size: 1.8rem;
+    color: var(--button-title-color);
+    margin-top: 20px;
+}
+
+.footer-first-item p{
+    margin-top: 100px !important;
+    width: 350px;
+    text-align: justify;
+    color: var(--title-color);
+    font-size: 1.25rem !important;
+}
+
+.footer-item{
+    flex: 1;
+    height: 100%;
+}
+
+.footer-item p{
+    margin-top: 20px;
+    font-size: 1.1rem;
+    color: var(--button-title-color);
+}
+
+.footer-item input{
+    margin-top: 10px;
+    padding: 15px;
+    border: 2px solid var(--button-title-color);
+    border-radius: 5px;
+    width: 300px;
+    font-size: 1rem;
+}
+
+.footer-item button{
+    margin-top: 25px;
+    padding: 15px;
+    background: var(--button-title-color);
+    color: var(--background-color);
+    font-size: 1.2rem;
+    border-radius: 5px;
+    transition: .5s;
+}
+
+.footer-item button:hover{
+    cursor: pointer;
+    background: var(--title-color);
+    transition: .5s;
+}
+
+.footer-item h4{
+    font-weight: bold;
+    color: var(--title-color);
+    font-size: 1.5rem;
+}
+
+.footer-item ul{
+    margin-top: 20px;
+}
+
+.footer-item li{
+    margin-top: 20px;
+    font-size: 1.25rem;
+    font-weight: 400;
+    list-style-type: none;
+    color: var(--button-title-color);
+    opacity: 1;
+}
+
+.footer-item li a{
+    text-decoration: none;
+}
+
+.footer-item li a:visited{
+    color: var(--button-title-color) !important;
+}
+
+.footer-item li a:active{
+    color: var(--button-title-color) !important;
+}
+
+.footer-item li a:hover{
+    cursor: pointer;
+    text-decoration: underline;
+    color: var(--button-title-color) !important;
 }
