--- a/src/components/header/header.component.css
+++ b/src/components/header/header.component.css
@@ -5,7 +5,9 @@ header{
 .default-header-content{
     display: flex;
     height: 80px;
-    width: 100vw;
+    width: 90vw;
+    margin-left: 50%;
+    transform: translateX(-50%);
     top: 0;
 }
 
@@ -181,7 +183,7 @@ header{
     cursor: pointer;
 }
 
-@media (max-width: 1000px){
+@media (max-width: 1100px){
     .default-header-content{
         display: none !important;
     }
