--- a/src/pages/home/home.page.css
+++ b/src/pages/home/home.page.css
@@ -1,6 +1,26 @@
-*{  
-    background-color: rgba(250, 250, 241, 0.8) ;
+.home-first-block{
+    display: flex;
+    width: 90vw;
+    height: 800px;
+    margin-left: 50%;
+    transform: translateX(-50%);
 }
+
+.home-first-block-item{
+    flex: 1;
+    height: 100%;
+    border: 1px solid black;
+}
+
+.home-first-block-item img{
+    width: 90%;
+}
+
+.home-first-block-item p{
+    color: var(--button-title-color)
+}
+
+
 
 /* Formatação Imagem*/
 
