--- a/src/pages/about/about.page.css
+++ b/src/pages/about/about.page.css
@@ -36,7 +36,8 @@
     width: 50%;
     text-align: justify;
     font-size: 1.3rem;
-    color: var(--button-title-color)
+    color: var(--button-title-color);
+    margin-left: 18%;
 }
 
 .about-second-block{
@@ -52,4 +53,150 @@
 
 .about-second-block img{
     width: 60%;
+}
+
+.about-third-block{
+    width: 90vw;
+    height: 1000px;
+    margin-left: 50%;
+    transform: translateX(-50%);
+    margin-top: 100px;
+}
+
+.about-third-block-content{
+    width: 70%;
+    height: 100%;
+    border-top: 1px solid rgba(0, 0, 0, .1);
+    margin-left: 50%;
+    transform: translateX(-50%);
+}
+
+.about-third-block-text{
+    display: flex;
+    width: 100%;
+    height: 80%;
+}
+
+.about-third-block-text-item{
+    flex: 1;
+    height: 100%;
+}
+
+.about-third-block-text-item h2{
+    margin-top: 50px;
+    text-align: left;
+    font-size: 2.5rem;
+    width: 70%;
+    color: var(--title-color);
+    margin-left: 50%;
+    transform: translateX(-50%);
+}
+
+.about-third-block-text-item h6{
+    margin-top: 50px;
+    width: 70%;
+    text-align: left;
+    font-size: 1.4rem;
+    color: var(--title-color);
+    margin-left: 50%;
+    transform: translateX(-50%);
+}
+
+.about-third-block-text-item p{
+    text-align: left;
+    width: 70%;
+    color: var(--button-title-color);
+    font-size: 1.2rem;
+    text-align: justify;
+    margin-left: 50%;
+    transform: translateX(-50%);
+}
+
+.about-third-block-text-item h3{
+    text-align: left;
+    width: 70%;
+    color: var(--button-title-color);
+    font-size: 1.6rem;
+    text-align: justify;
+    margin-left: 50%;
+    transform: translateX(-50%);
+    margin-top: 50px;
+}
+
+.about-third-block-numbers{
+    width: 100%;
+    height: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-top: 1px solid rgba(0, 0, 0, .1);
+}
+
+.about-third-block-numbers-item{
+    flex: 1;
+    display: flex;
+    align-items: left;
+    justify-content: center;
+    flex-direction: column;
+    height: 90%;
+}
+
+.about-third-block-numbers-item p{
+    width: 70%;
+    color: var(--button-title-color);
+    font-size: 1.1rem;
+    text-align: left;
+}
+
+.about-third-block-numbers-item h2{
+    color: var(--title-color);
+    margin-top: 20px;
+    font-size: 3.5rem;
+    text-align: left;
+}
+
+.about-fourth-block{
+    margin-top: 100px;
+    margin-bottom: 100px;
+    background: var(--button-title-color);
+    height: 400px;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.about-fourth-block-content{
+    width: 65vw;
+    height: 60%;
+}
+
+.about-fourth-block-content h3{
+    text-align: left;
+    color: var(--background-color);
+    font-size: 2rem;
+    font-weight: 500;
+    margin-top: 10px;
+}
+
+.about-fourth-block-content a{
+    margin-top: 70px;
+    width: 200px;
+    padding: 15px;
+    border: 5px solid white;
+    background: var(--background-color);
+    border-radius: 100px;
+    color: var(--button-title-color);
+    font-size: 1.5rem;
+    font-weight: bold;
+    float: left;
+    cursor: pointer;
+    transition: .5s;
+    text-decoration: none;
+}
+
+.about-fourth-block-content a:hover{
+    background: transparent;
+    color: var(--background-color);
+    transition: .5s;
 }
