--- a/src/pages/about/about.page.css
+++ b/src/pages/about/about.page.css
@@ -57,7 +57,7 @@
 
 .about-third-block{
     width: 90vw;
-    height: 1000px;
+    height: 1100px;
     margin-left: 50%;
     transform: translateX(-50%);
     margin-top: 100px;
@@ -82,7 +82,11 @@
     height: 100%;
 }
 
-.about-third-block-text-item h2{
+.about-third-block-text-title-item{
+    height: 10%;
+}
+
+.about-third-block-text-title-item h2{
     margin-top: 50px;
     text-align: left;
     font-size: 2.5rem;
@@ -199,4 +203,124 @@
     background: transparent;
     color: var(--background-color);
     transition: .5s;
+}
+
+@media(max-width: 1650px){
+    .about-third-block{
+        height: 2700px;
+    }
+
+    .about-third-block-text-item h6{
+        font-size: 1.2rem;
+    }
+
+    .about-third-block-text-item p{
+        font-size: 1rem;
+    }
+
+    .about-second-block img{
+        width: 60% !important;
+    }
+}
+
+@media(max-width: 1100px){
+    .about-first-block{
+        flex-direction: column;
+        height: 550px;
+    }
+
+    .about-first-block-item h2{
+        font-size: 3rem;
+        width: 90%;
+    }
+
+    .about-first-block-item p{
+        font-size: 1.3rem;
+        width: 80%;
+        margin-left: 0px !important;
+    }
+
+    .about-second-block{
+        align-items: flex-start;
+        height: 250px;
+    }
+
+    .about-second-block img{
+        width: 100% !important;
+        margin-top: 0px;
+    }
+
+    .about-third-block{
+        height: 1600px;
+    }
+
+    .about-third-block-text{
+        flex-direction: column;
+    }
+
+    .about-third-block-content{
+        width: 90%;
+    }
+
+    .about-third-block-text-title-item{
+        height: 200px !important;
+    }
+
+    .about-third-block-text{
+        height: 50%;
+    }
+
+    .about-third-block-text-title-item h2{
+        width: 100%;
+    }
+    
+    .about-third-block-text-item h3{
+        width: 100%;
+    }
+
+    .about-third-block-text-item h6{
+        width: 100%;
+        font-size: 1.3rem;
+    }
+
+    .about-third-block-text-item p{
+        width: 100%;
+    }
+
+    .about-third-block-numbers{
+        flex-direction: column;
+        height: 40%;
+        margin-top: 280px;
+    }
+
+    .about-third-block-numbers-item{
+        height: 20%;
+        align-items: center;
+    }
+
+    .about-third-block-numbers-item p{
+        text-align: center;
+    }
+
+    .about-fourth-block{
+        margin-top: 200px;
+        height: 550px;
+    }
+
+    .about-fourth-block-content{
+        width: 80vw;
+    }
+
+    .about-fourth-block-content h3{
+        font-size: 1.7rem;
+        text-align: center;
+        margin-top: 50px;
+    }
+
+    .about-fourth-block-content a{
+        margin-left: 50%;
+        transform: translateX(-50%);
+        font-size: 1.2rem;
+        width: 150px;
+    }
 }
