--- a/src/components/footer/footer.component.css
+++ b/src/components/footer/footer.component.css
@@ -1,7 +1,9 @@
 footer{
-    width: 100vw;
+    width: 90vw;
     height: 350px;
     bottom: 0;
+    margin-left: 50%;
+    transform: translateX(-50%);
     position: relative;
     margin-top: 50px;
     display: flex;
@@ -16,7 +18,7 @@ footer{
     margin-bottom: 20px;
     padding-top: 50px;
     display: flex;
-    border-top: 1px solid rgba(0,0,0,.2);
+    border-top: 1px solid rgba(0,0,0,.1);
 }
 
 .footer-first-item{
@@ -92,7 +94,8 @@ footer{
     background: var(--button-title-color);
     color: var(--background-color);
     font-size: .9rem;
-    border-radius: 5px;
+    border-radius: 30px;
+    font-weight: bold;
     transition: .5s;
 }
 
