--- a/src/pages/about/about.page.css
+++ b/src/pages/about/about.page.css
@@ -34,7 +34,7 @@
 
 .about-first-block-item p{
     width: 50%;
-    text-align: justify;
+    text-align: left;
     font-size: 1.3rem;
     color: var(--button-title-color);
     margin-left: 18%;
