feature: add home page (#8)
* refactor: refactor responsive in about page

* feature: add home page first block

* feature: add home page missing blocks and responsive

--- a/src/components/header/header.component.css
+++ b/src/components/header/header.component.css
@@ -135,7 +135,7 @@ header{
 .responsive-menu-content{
     width: 70vw;
     height: 100vh;
-    background: var(--secondary-background-color);
+    background: var(--background-color);
     position: fixed;
     margin-left: -100vw;
     transition: .5s;
